--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -1,10 +1,12 @@
 <div class="row mt-4">
-  <div class="col-lg-6 offset-lg-3">
-    <img class="img-fluid w-100 rounded mb-3" src="{{event.imgUrl}}" alt="Card image cap">
-    <h3>{{event.title}}</h3>
-    <div class="lead">{{event.desc}}</div>
-      <div class="text-right">
-        <a href="/events/{{event.id}}/edit">Edit</a>
+      <div class="col-lg-6">
+          <img class="img-fluid w-100 rounded mb-3" src="{{event.imgUrl}}" alt="Card image cap">
+          <small class="text-muted">Created on: {{event.createdAt}}</small>
+        <h3>{{event.title}}</h3>
+        <div class="lead">{{event.desc}}</div>
+            <div class="text-right">
+                <a href="/events/{{event.id}}/edit">Edit</a>
+            </div>
       </div>
       <div class="col-lg-4 offset-lg-1">
       <div class="d-flex justify-content-between">
@@ -26,6 +28,5 @@
           </div>
         {{/each}}
       </div>
-    </div>
   </div>
 </div>
